# schemata-validator-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
schemata_validator/: __init__.py  additional_props.py  error_messages.py  types.py  validator.py
tests/: test_validator.py
